# GwPathfinder

./: .gitignore  Build.ps1  CMakeLists.txt  MapArchiveLoader.cpp  MapArchiveLoader.h  MapDataRegistry.cpp  MapDataRegistry.h  PathfinderAPI.cpp  PathfinderAPI.h  PathfinderCore.cpp  PathfinderCore.h  PathfindingViewer.html  PreSearingWorldGraphViewer.html  QUICKSTART.md  README.md  TestAutoIt.au3  build.bat  vcpkg.json
maps/: 103_Prophecies_Kryta_Ascalon_AscalonFoothills_ExplorableZone.json  106_Prophecies_Kryta_Ascalon_FlameTempleCorridor_ExplorableZone.json  109_Prophecies_Kryta_CrystalDesert_TheAmnoonOasis_City.json  117_Prophecies_Kryta_CrystalDesert_ThirstyRiver_MissionOutpost.json  118_Prophecies_Kryta_CrystalDesert_ElonaReach_MissionOutpost.json  119_Prophecies_Kryta_CrystalDesert_AuguryRock_MissionOutpost.json  129_Factions_Cantha_EchovaldForest_LutgardisConservatory_Outpost.json  12_Prophecies_Kryta_MaguumaJungle_AuroraGlade_MissionOutpost.json  130_Factions_Cantha_EchovaldForest_VasburgArmory_Outpost.json  131_Prophecies_Kryta_Ascalon_SerenityTemple_Outpost.json  132_Prophecies_Kryta_NorthernShiverpeaks_IceToothCave_Outpost.json  133_Prophecies_Kryta_NorthernShiverpeaks_BeaconsPerch_Outpost.json  134_Prophecies_Kryta_NorthernShiverpeaks_YaksBend_Outpost.json  135_Prophecies_Kryta_Ascalon_FrontierGate_Outpost.json  136_Prophecies_Kryta_Kryta_Beetletun_Outpost.json  137_Prophecies_Kryta_Kryta_FishermensHaven_Outpost.json  138_Prophecies_Kryta_Kryta_TempleoftheAges_Outpost.json  139_Prophecies_Kryta_MaguumaJungle_VentarisRefuge_Outpost.json  140_Prophecies_Kryta_MaguumaJungle_DruidsOverlook_Outpost.json  141_Prophecies_Kryta_MaguumaJungle_MaguumaStade_Outpost.json  142_Prophecies_Kryta_MaguumaJungle_QuarrelFalls_Outpost.json  145_Prophecies_DevContinent_PreSearingAscalon_TheCatacombs_ExplorableZone.json  148_Prophecies_DevContinent_PreSearingAscalon_AscalonCity_Outpost.json  151_Prophecies_DevContinent_PreSearingAscalon_AscalonAcademy_ExplorableZone.json  152_Prophecies_Kryta_CrystalDesert_HeroesAudience_Outpost.json  153_Prophecies_Kryta_CrystalDesert_SeekersPassage_Outpost.json  154_Prophecies_Kryta_CrystalDesert_DestinysGorge_Outpost.json  155_Prophecies_Kryta_NorthernShiverpeaks_CampRankor_Outpost.json  156_Prophecies_Kryta_NorthernShiverpeaks_TheGraniteCitadel_Outpost.json  157_Prophecies_Kryta_NorthernShiverpeaks_MarhansGrotto_Outpost.json  158_Prophecies_Kryta_NorthernShiverpeaks_PortSledge_Outpost.json  159_Prophecies_Kryta_NorthernShiverpeaks_CopperhammerMines_Outpost.json  163_Prophecies_DevContinent_PreSearingAscalon_PreSearingTheBarradinEstate_Outpost.json  164_Prophecies_DevContinent_PreSearingAscalon_PreSearingAshfordAbbey_Outpost.json  165_Prophecies_DevContinent_PreSearingAscalon_PreSearingFoiblesFair_Outpost.json  166_Prophecies_DevContinent_PreSearingAscalon_PreSearingFortRanik_Outpost.json  181_Prophecies_Kryta_NorthernShiverpeaks_ShiverpeakArena_Arena.json  185_Prophecies_Kryta_HeroesAscent_TheUnderworld_ExplorableZone.json  188_Core_BattleIsles_BattleIslands_RandomArena_Arena.json  193_Factions_Cantha_JadeSea_Cavalon_City.json  (+129 more)
